--- a/public/id/index.html
+++ b/public/id/index.html
@@ -1906,7 +1906,7 @@
 														data-apply-type="ajax" data-redirect="yes"
 														data-redirect-path="https://www.PJM Land.com/id/properti/">
 														<button type="button"
-															class="apply-filters__button">Cari</button>
+															class="apply-filters__button" style="background-color: #2b256f!important;">Cari</button>
 													</div>
 												</div>
 											</div>
@@ -2272,7 +2272,7 @@
 																										<div
 																											class="wd-button-wrapper text-left">
 																											<a class="btn btn-style-default btn-style-rectangle btn-size-default btn-color-primary btn-icon-pos-right"
-																												href="#">
+																												href="#" style="background-color: #2b256f!important;">
 																												<span
 																													class="wd-btn-text"
 																													data-elementor-setting-key="text">
@@ -2461,7 +2461,7 @@
 																										<div
 																											class="wd-button-wrapper text-left">
 																											<a class="btn btn-style-default btn-style-rectangle btn-size-default btn-color-primary btn-icon-pos-right"
-																												href="#">
+																												href="#" style="background-color: #2b256f!important;">
 																												<span
 																													class="wd-btn-text"
 																													data-elementor-setting-key="text">
@@ -2636,7 +2636,7 @@
 																										<div
 																											class="wd-button-wrapper text-left">
 																											<a class="btn btn-style-default btn-style-rectangle btn-size-default btn-color-primary btn-icon-pos-right"
-																												href="#">
+																												href="#" style="background-color: #2b256f!important;">
 																												<span
 																													class="wd-btn-text"
 																													data-elementor-setting-key="text">
@@ -3054,7 +3054,7 @@
 											<div class="elementor-widget-container">
 												<div class="wd-button-wrapper text-center">
 													<a class="btn btn-style-default btn-style-rectangle btn-size-default btn-color-primary btn-icon-pos-right"
-														href="media/index.html">
+														href="media/index.html" style="background-color: #2b256f!important;">
 														<span class="wd-btn-text" data-elementor-setting-key="text">
 															Baca Lainnya </span>
 
@@ -3169,7 +3169,7 @@
 																						lainnya</span></label></span></span></span></label><br />
 																<label> <input
 																		class="wpcf7-form-control wpcf7-submit has-spinner"
-																		type="submit" value="Daftar" /> </label>
+																		type="submit" value="Daftar" style="background-color: #2b256f!important;"/> </label>
 															</p>
 														</div>
 														<p style="display: none !important;"
