--- a/public/id/index.html
+++ b/public/id/index.html
@@ -1055,25 +1055,25 @@
 													<ul class="wd-sub-menu color-scheme-dark">
 														<li id="menu-item-4678"
 															class="menu-item menu-item-type-post_type menu-item-object-properties menu-item-4678 item-level-1 wd-event-hover">
-															<a href="kantor/tangerang/aeropolis/index.html"
+															<a href="kantor/surabaya/easton-square/index.html"
 																class="woodmart-nav-link">Easton Square</a></li>
 														<li id="menu-item-2818"
 															class="menu-item menu-item-type-post_type menu-item-object-properties menu-item-2818 item-level-1 wd-event-hover">
-															<a href="kantor/surabaya/PJM Land-tower-surabaya/index.html"
+															<a href="kantor/surabaya/ruko-harvest-one/index.html"
 																class="woodmart-nav-link">Ruko Harvest One</a>
 														</li>
 														<li id="menu-item-2813"
 															class="menu-item menu-item-type-post_type menu-item-object-properties menu-item-2813 item-level-1 wd-event-hover">
-															<a href="kantor/jakarta/PJM Land-tower-jakarta/index.html"
+															<a href="kantor/surabaya/mutiara-bekasi-center/index.html"
 																class="woodmart-nav-link">Mutiara Bekasi Center</a>
 														</li>
 														<li id="menu-item-2817"
 															class="menu-item menu-item-type-post_type menu-item-object-properties menu-item-2817 item-level-1 wd-event-hover">
-															<a href="kantor/surabaya/praxis/index.html"
+															<a href="kantor/surabaya/the-east-81/index.html"
 																class="woodmart-nav-link">The East 81</a></li>
 														<li id="menu-item-2814"
 															class="menu-item menu-item-type-post_type menu-item-object-properties menu-item-2814 item-level-1 wd-event-hover">
-															<a href="kantor/jakarta/sq-office/index.html"
+															<a href="kantor/surabaya/semut-square/index.html"
 																class="woodmart-nav-link">Semut Square</a></li>
 													</ul>
 												</div>
@@ -4079,21 +4079,21 @@
 				<ul class="wd-sub-menu">
 					<li
 						class="menu-item menu-item-type-post_type menu-item-object-properties menu-item-4678 item-level-1">
-						<a href="kantor/tangerang/aeropolis/index.html" class="woodmart-nav-link">Easton Square</a></li>
+						<a href="kantor/surabaya/easton-square/index.html" class="woodmart-nav-link">Easton Square</a></li>
 					<li
 						class="menu-item menu-item-type-post_type menu-item-object-properties menu-item-2818 item-level-1">
-						<a href="kantor/surabaya/PJM Land-tower-surabaya/index.html" class="woodmart-nav-link">Ruko Harvest One
+						<a href="kantor/surabaya/ruko-harvest-one/index.html" class="woodmart-nav-link">Ruko Harvest One
 							</a></li>
 					<li
 						class="menu-item menu-item-type-post_type menu-item-object-properties menu-item-2813 item-level-1">
-						<a href="kantor/jakarta/PJM Land-tower-jakarta/index.html" class="woodmart-nav-link">Mutiara Bekasi Center
+						<a href="kantor/surabaya/mutiara-bekasi-center/index.html" class="woodmart-nav-link">Mutiara Bekasi Center
 							</a></li>
 					<li
 						class="menu-item menu-item-type-post_type menu-item-object-properties menu-item-2817 item-level-1">
-						<a href="kantor/surabaya/praxis/index.html" class="woodmart-nav-link">The East 81</a></li>
+						<a href="kantor/surabaya/the-east-81/index.html" class="woodmart-nav-link">The East 81</a></li>
 					<li
 						class="menu-item menu-item-type-post_type menu-item-object-properties menu-item-2814 item-level-1">
-						<a href="kantor/jakarta/sq-office/index.html" class="woodmart-nav-link">Semut Square</a></li>
+						<a href="kantor/surabaya/semut-square/index.html" class="woodmart-nav-link">Semut Square</a></li>
 					
 				</ul>
 			</li>
